--- a/ifa-platform/package.json
+++ b/ifa-platform/package.json
@@ -69,6 +69,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-pdf/renderer": "^4.3.0",
+    "@sparticuz/chromium": "^143.0.4",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.6.1",
@@ -95,6 +96,7 @@
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
     "pdf-to-img": "^5.0.0",
+    "pdfjs-dist": "^5.4.624",
     "pptxgenjs": "^4.0.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
